# pdf-redaction-mcp

./: .gitignore  CHANGELOG.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md  main.py  pyproject.toml  run_server.py
.github/: copilot-instructions.md
examples/: example_base64_usage.py  example_usage.py
src/pdf_redaction_mcp/: __init__.py  server.py
tests/: test_server.py
