[project]
name = "pdf-redaction-mcp"
version = "0.2.0"
description = "MCP server for PDF redaction using pymupdf"
readme = "README.md"
authors = [
    { name = "Marc Hanheide", email = "marc@hanheide.net" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "pymupdf>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
pdf-redaction-mcp = "pdf_redaction_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-asyncio>=0.25.2",
]
